--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-
+<div id="mapId" style="height:100%; width: 100%;"></div>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
