--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
-    <ion-fab-button (click)="selecTarea('nuevo')">
+    <ion-fab-button (click)="selecTareaPlus('nuevo')">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
